banking-app-k8s/ingress/gateway-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: gateway-ingress
  namespace: banking

spec:

  podSelector:
    matchLabels:
      app: gateway

  policyTypes:
    - Ingress

  ingress:

    - from:

        - podSelector:
            matchLabels:
              app: ingress-nginx

        - podSelector:
            matchLabels:
              app: frontend
